--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
         <module>week1</module>
         <module>week2</module>
         <module>week3</module>
+        <module>week4</module>
     </modules>
     
     <properties>
