--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>week2</module>
         <module>week3</module>
         <module>week4</module>
+        <module>week5</module>
     </modules>
     
     <properties>
